Raffle tiles image distortion fixes

--- a/_sass/_slider.scss
+++ b/_sass/_slider.scss
@@ -46,7 +46,7 @@
           border: solid 1px $pale-grey;
           border-bottom: none;
           display: block;
-          height: 175px;
+          max-height: 210px;
           max-width: 100%;
           overflow: hidden;
           width: 100%;
